--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
+    "react-native-svg": "^12.1.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2"
   },
